# gaia-supdate

./: .buildinfo  LICENSE.txt  MANIFEST.in  README.md  citation_license.html  gaiasupdate.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  supdate_output_params.html  tools.html
.doctrees/: citation_license.doctree  environment.pickle  gaiasupdate.doctree  index.doctree  installation.doctree  modules.doctree  supdate_output_params.doctree  tools.doctree
.github/workflows/: ci_build_documentation.yml  ci_coverage.yml  ci_run_tests.yml  ci_syntax_quality.yml
_modules/: index.html
_modules/gaiasupdate/: epoch_astrometry.html  metrics.html  solver.html  utils.html
_static/: documentation_options.js
docs/source/: citation_license.rst  conf.py  gaiasupdate.rst  index.rst  installation.rst  modules.rst  supdate_output_params.rst  tools.rst
src/gaiasupdate/: __init__.py  constants.py  epoch_astrometry.py  metrics.py  solver.py  utils.py
tests/: __init__.py  constants.py  test_archive_supdate.py  test_constrained_colour_update.py  test_cu9_supdate.py  test_gacs_interface.py  test_heaviside_weight.py  test_solver.py  test_source_update.py  test_utils.py
tests/test_data/: epoch_astrometry_sample.parquet
tests/test_data/agis/: 1_agis_input_source_parameters.csv  1_agis_test_source_parameters.csv  1_updtCalculator_coefficients.csv  2_agis_input_source_parameters.csv  2_agis_test_source_parameters.csv  2_updtCalculator_coefficients.csv  BasicSourceUpdateCalculatorTest_setupNominalData_coefficients.csv  RobustSourceUpdateCalculatorTest_setupNominalDataWithOutlier_coefficients.csv  RobustSourceUpdateCalculatorTest_setupNominalDataWithOutliers_coefficients.csv  RobustSourceUpdateCalculatorTest_setupNominalData_coefficients.csv
tests/test_data/constrained_colour/: 1_archive_epoch_astro.parquet  1_archive_source_update_results.parquet  2_agis_source_update_results.parquet  2_epoch_astrometry.parquet  3_0_agis_input_source_parameters.csv  3_X_agis_test_source_parameters.csv  3_coefficients.csv
tests/test_data/gacs_data_link/: 1_epoch_astrometry.parquet  EPOCH_ASTROMETRY-Gaia DR4_INT2 1.csv  EPOCH_ASTROMETRY-Gaia DR4_INT2 1.ecsv  EPOCH_ASTROMETRY-Gaia DR4_INT2 1.fits  EPOCH_ASTROMETRY-Gaia DR4_INT2 1.votplain.xml  EPOCH_ASTROMETRY-Gaia DR4_INT2 1.xml
tests/test_data/heaviside_weighting/: agis_source_update_results.parquet  epoch_astrometry.parquet
