#   Copyright (c) European Space Agency, 2026.
#
#   This file is subject to the terms and conditions defined in file "LICENSE.txt", which
#   is part of this source code package. No part of the package, including
#   this file, may be copied, modified, propagated, or distributed except according to
#   the terms contained in the file "LICENSE.txt".

[build-system]
requires = ["setuptools>=58.0.4",  "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaiasupdate"
dynamic = ["version"]

description = "Compute astrometric source parameters from Gaia epoch astrometry"
keywords = [ "astronomy", "gaia", "dr4", "astrometry", "epoch astrometry" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

readme = "README.md"
license = {text = "European Space Agency Public License (ESA-PL) Permissive (Type 3) - v2.4" }

requires-python = ">=3.9"

dependencies = [
    "numpy >= 1.26.2",
    "scipy >= 1.12",
    "pandas < 3.0",
    "astropy < 8.0",
    "pyarrow >= 15.0",
    "astroquery >= 0.4.7",
]

authors = [
    {name = "Johannes Sahlmann", email = "Johannes.Sahlmann@esa.int" },
    {name = "Arancha Delgado", email = "Arancha.Delgado@ext.esa.int" }
]
maintainers  = [
    {name = "Arancha Delgado", email = "Arancha.Delgado@ext.esa.int" }
]

[project.urls]
homepage = "https://www.cosmos.esa.int/web/gaia/gaia-source-update"
documentation = "https://esa.github.io/gaia-supdate"
repository = "https://github.com/esa/gaia-supdate"
GitHub = "https://github.com/esa/gaia-supdate"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["docs*", "tests*"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "flake8", "flake8-pyproject", "pyroma", "pydocstyle"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-pyproject", "tomli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "pytest --durations=0 -vs -o log_cli=true --log-level=INFO tests"
addopts = "--showlocals --capture=no -vv"

[tool.flake8]
max-line-length = 127
count = true
exclude = ["docs"]
ignore = ["E712", "E501", "F401", "W503"]

[tool.pydocstyle]
convention = "numpy"

[tool.coverage.run]
omit = ["setup.py"]

[tool.sphinx-pyproject]
copyright = "2026, European Space Agency (ESA)"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.napoleon",
    "sphinx.ext.viewcode"
    ]
    
html_show_sourcelink = false
html_copy_source = false

html_theme = "sphinx_rtd_theme"
templates_path = ["_templates"]
html_static_path = ["_static"]
exclude_patterns = ["build"]

[tool.sphinx.html_theme_options]
navigation_depth = 2
collapse_navigation = true
prev_next_buttons_location = false
